Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30442

QtQuick VideoOutput ignores the video format's scanline direction

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.2.0
    • 5.0.1
    • Multimedia
    • None
    • bd30595975e55dc051d91da6c6795cecf47e6feb

    Description

      When sending video frames into a VideoOutput item via QAbstractVideoSurface, the scanLineDirection field is ignored.

      Attachments

        For Gerrit Dashboard: QTBUG-30442
        # Subject Branch Project Status CR V

        Activity

          People

            ylopes Yoann Lopes
            jfaust Josh Faust
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes