Support bytes per line and scanline direction in VideoOutput

Changed QDeclarativeVideoRendererBackend::updateGeometry() support
its surface format's scanline direction by flipping the top/bottom
texture coordinates.

Changed QSGVideoMaterial_YUV420 and QSGVideoMaterial_RGB to call
glPixelStorei(GL_UNPACK_ROW_LENGTH, ...) to take the format's bytes
per line into account.

Task-number: QTBUG-30442
Task-number: QTBUG-30447